# lurk

./: .gitignore  LICENSE  README.md  amazon.py  api.py  example.lurk.yaml  hello.py  lurk.yaml  main.py  project.md  pyproject.toml  web.py
lurk/: __main__.py  api_client.py  cli.py  config.py  http_client.py  lurk.py  misc.py  models.py
lurk/checkers/: amazon.py  best_buy.py  cc_checker.py  cc_checker_wip.py  checker.py  memory_express.py
lurk/notifiers/: telegram.py
src/: api_client.py  models.py  settings.py
src/checkers/: best_buy.py  cc_checker.py  checker.py
