[project]
name = "best-buy-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.7.4",
    "mypy>=1.14.1",
    "nodriver>=0.39",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[tool.mypy]
strict = true
explicit_package_bases = true
