[project]
name = "lurk"
version = "0.1.0"
description = "A CLI tool to check product stock across multiple stores."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.7.4",
    "mypy>=1.14.1",
    "nodriver>=0.39",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "typer>=0.15.1",
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20241230",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
lurk = "lurk.cli:app"

[tool.mypy]
strict = true
explicit_package_bases = true
